ocp-virt/overlays/prod/patches/keycloak-route-patch.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: keycloak-route
spec:
  host: keycloak.apps.cluster-wmpjb.dynamic.redhatworkshops.io
